fix: :adhesive_bandage: General fixes
Fixed styling issue when data is too long, made card display the correct image dynamically and renamed all mentions of Åre to Aare.

--- a/src/component/DestinationCardStyle.css
+++ b/src/component/DestinationCardStyle.css
@@ -17,7 +17,6 @@
   height: 15vw;
   background-color: #406882;
   border-radius: 10%;
-  font-size: 1.5vw;
   font-family: roboto-regular;
   overflow: hidden;
   display: flex;
@@ -34,8 +33,16 @@
   margin-left: 0.5vw;
 }
 
+.destinationName {
+  font-size: 1.5vw;
+}
+
+.destinationInfo {
+  font-size: 1.2vw;
+}
+
 .weatherIcon {
-  width: 30%;
+  width: 27%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -71,6 +78,14 @@
     width: 90vw;
     height: 90vw;
     font-size: 9vw;
+  }
+
+  .destinationName {
+    font-size: 9vw;
+  }
+
+  .destinationInfo {
+    font-size: 7.2vw;
   }
 
   .destinationCardInfo {
